# BuildConnectLibs

CMakeAddLib/: .gitignore  CMakeAddLib.cpp  CMakeLists.txt
CMakeAddLib/CMakeLeaverLib/: CMakeLeaverLib.sln  CMakeLeaverLib.vcxproj  Leaver.cpp  Leaver.h
CMakeAddLib/src/: CMakeAddLib.cpp  CMakeAddLib.h  CMakeLists.txt
CMakeAddLib/src/LeaverDynLib/: LeaverDynLib.sln  LeaverDynLib.vcxproj
CMakeHierarhyDynLib/: .gitignore
CMakeHierarhyDynLib/src/: CMakeLists.txt  header.h
CMakeHierarhyDynLib/src/ClassHierarchyDynLib/: ClassHierarchyDynLib.sln  ClassHierarchyDynLib.vcxproj.filters  equaltrian.h  figure.h  isotrian.h  parall.cpp  parall.h  quadrilateral.cpp  quadrilateral.h  rectangle.h  recttrian.h  rhombus.h  square.cpp  square.h  triangle.h
ClassHierarchyDynLib/: ClassHierarchyDynLib.sln  ClassHierarchyDynLib.vcxproj  equaltrian.cpp  equaltrian.h  figure.cpp  figure.h  isotrian.cpp  isotrian.h  parall.h  quadrilateral.h  rectangle.cpp  rectangle.h  recttrian.cpp  recttrian.h  rhombus.cpp  rhombus.h  square.h  triangle.cpp  triangle.h
ClassHierarchyDynLib/ClassHierarhyVsClient/: ClassHierarhyVsClient.vcxproj  ClassHierarhyVsClient.vcxproj.filters  classHierarchy.cpp  header.h
GreeterStaticLib/: Greeter.cpp  Greeter.h  GreeterStaticLib.sln  GreeterStaticLib.vcxproj
GreeterStaticLib/GreeterClient/: GreeterClient.vcxproj  main.cpp
LeaverDynLib/: Leaver.h  LeaverDynLib.sln
LeaverDynLib/LeaverClient/: LeaverClient.cpp  LeaverClient.vcxproj
